Made scrollable-x container but have a bug with cropping text from the left side in it

--- a/Playground/TooltipableContainers with Scroll/style.css
+++ b/Playground/TooltipableContainers with Scroll/style.css
@@ -35,15 +35,15 @@ body {
 
 .external-container {
     background: red;
-    width: 10rem;
-    height: 5rem;
+    width: 15rem;
+    height: 10rem;
     position: relative;
 }
 
 .tooltipable-container {
     background: green;
-    width: 9rem;
-    height: 4rem;
+    width: 14rem;
+    height: 9rem;
     border: none;
     outline: none;
     box-shadow: none;
@@ -52,8 +52,7 @@ body {
 
 .content-container {
     background: lightblue;
-    width: 8rem;
-    height: 3rem;
+    height: 8rem;
 }
 
 .tooltipable-container:before {
@@ -97,4 +96,12 @@ body {
 .tooltipable-container:active,
 .tooltipable-container:focus {
     background: lightgreen;
+}
+
+.scrollableX-container {
+    flex-direction: row;
+    flex-grow: 1;
+    flex-basis: 0;
+    overflow-x: auto;
+    white-space: nowrap;
 }
